correction chemin pour github

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Maquette site test</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
 </head>
 <body>
     <header>
-        <img src="../img/logo%20(2).png" alt="logo">
+        <img src="img/logo%20(2).png" alt="logo">
         <nav>
             <ul>
                 <li><a href="#"> Nos Vérandas </a></li>
@@ -35,7 +35,7 @@
     <section id = "corps">
         <section id = "presentation">
             <section>
-                <img src="../img/image1%20(3).jpg" alt="image véranda">
+                <img src="img/image1%20(3).jpg" alt="image véranda">
                 <h3>Véranda 91 </h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id nulla non erat gravida elementum. Nam dignissim pharetra sapien quis efficitur. Morbi sagittis eros id molestie consequat. Sed in lorem tempus, porta mauris vel, dapibus quam. Donec neque nibh, pharetra eu fringilla eu, rutrum et sem. Sed convallis ipsum velit
@@ -43,15 +43,15 @@
             </section>
             <section id="cartes">
                 <section>
-                    <img src="../img/image4%20(2).png">
+                    <img src="img/image4%20(2).png">
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id nulla non erat gravida elementum. Nam dignissim pharetra sapien quis efficitur. Morbi sagittis eros id molestie consequat.</p>
                 </section>
                 <section>
-                    <img src="../img/image5%20(2).png">
+                    <img src="img/image5%20(2).png">
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id nulla non erat gravida elementum. Nam dignissim pharetra sapien quis efficitur. Morbi sagittis eros id molestie consequat.</p>
                 </section>
                 <section>
-                    <img src="../img/4.png">
+                    <img src="img/4.png">
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id nulla non erat gravida elementum. Nam dignissim pharetra sapien quis efficitur. Morbi sagittis eros id molestie consequat.</p>
                 </section>
             </section>
